# model_console

./: .gitignore  README.md  pyproject.toml  run_locally.txt  setup.py
.tmp_config_loading_perf_run/: loops.yaml  policies.yaml
.tmp_config_rerun/: agents.yaml  policies.yaml
config/: agents.yaml  loops.yaml  policies.yaml
config/claude_prompt_only/: loops.yaml
config/codex_prompt_only/: loops.yaml
docs/: architecture.md  configuration.md  development.md  project-status.md  repo-map.md  runs-and-artifacts.md
model_console/: __init__.py  cli.py  config.py  engine.py  eval.py  executors.py  gitops.py  json_utils.py  logging_utils.py  mock_agent.py  models.py  prompts.py  role_assignment.py  safety.py  transcript.py  transcript_viewer.py  validator.py
model_console.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: implementer.template.txt  reviewer.template.txt
schemas/: base.meta.schema.json  implementer.output.schema.json  reviewer.output.schema.json
schemas/codex_strict/: complex.workflow.schema.json
scripts/: generate_product_brief_input.py  run_product_brief_batch.py
src/model_console/: __main__.py  command_builder.py  config.py  engine.py  eval.py  executors.py  gitops.py  json_utils.py  logging_utils.py  mock_agent.py  paths.py  prompts.py  reporting.py  reviews.py  role_assignment.py  run_state.py  runtime.py  transcript.py  workflow.py  (+3 more)
tasks/: lessons.md
tests/: test_000_path_setup.py  test_hardening.py  test_package_layout.py  test_runtime_portability.py  test_transcript.py  test_transcript_viewer.py
(+48 files in other folders)
